// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card snapshot a book card 1`] = `
<div>
  <div
    class="relative flex flex-col w-28"
  >
    <figure
      class="flex justify-center items-center"
    >
      <a
        class="relative w-28 h-[calc(7rem/2*3)]"
        href="/books/1"
      >
        <span
          style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
        >
          <img
            alt="This is an example book"
            data-nimg="fill"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
          />
          <noscript />
        </span>
      </a>
    </figure>
    <div
      class="flex flex-col text-sm"
    >
      <a
        class="link no-underline text-primary hover:bg-primary hover:text-primary-content focus:bg-primary-focus focus:text-primary-content"
        href="/books/1"
      >
        <h2
          class="truncate"
        >
          This is an example book
        </h2>
      </a>
      <p
        class="truncate"
      >
        No One
      </p>
    </div>
  </div>
</div>
`;

exports[`Card snapshot a book skeleton card 1`] = `
<div>
  <div
    class="relative flex flex-col mb-4 w-28 animate-pulse"
  >
    <div
      class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
    />
    <div
      class="mb-2 w-24 h-2 bg-slate-700 rounded"
    />
    <div
      class="mb-2 w-20 h-2 bg-slate-700 rounded"
    />
  </div>
</div>
`;

exports[`Card snapshot a long card 1`] = `
<div>
  <div
    class="flex py-4 gap-3"
  >
    <figure
      class="flex justify-center items-center"
    >
      <a
        class="relative w-28 h-[calc(7rem/2*3)]"
        href="/books/1"
      >
        <span
          style="box-sizing: border-box; display: block; overflow: hidden; background: none; opacity: 1; border: 0px; margin: 0px; padding: 0px; position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px;"
        >
          <img
            alt="This is an example book"
            data-nimg="fill"
            decoding="async"
            src="data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7"
            style="position: absolute; top: 0px; left: 0px; bottom: 0px; right: 0px; box-sizing: border-box; padding: 0px; margin: auto; display: block; width: 0px; height: 0px; min-width: 100%; max-width: 100%; min-height: 100%; max-height: 100%;"
          />
          <noscript />
        </span>
      </a>
    </figure>
    <div
      class="flex flex-col gap-2"
    >
      <div
        class="inline-flex justify-start"
      >
        <a
          class="link no-underline text-primary hover:bg-primary hover:text-primary-content focus:bg-primary-focus focus:text-primary-content"
          href="/books/1"
        >
          <h2
            class="truncate"
          >
            This is an example book
          </h2>
        </a>
      </div>
      <p
        class="truncate"
      >
        No One
      </p>
      <p
        class="truncate"
      />
    </div>
  </div>
</div>
`;

exports[`Card snapshot a long card skeleton 1`] = `
<div>
  <div
    class="relative flex mb-4 w-full gap-3 animate-pulse"
  >
    <div
      class="mb-2 w-28 h-[calc(7rem/2*3)] bg-slate-700 rounded"
    />
    <div
      class="flex flex-col w-full gap-2"
    >
      <div
        class="mb-2 w-1/5 h-2 bg-slate-700 rounded"
      />
      <div
        class="mb-2 w-1/6 h-2 bg-slate-700 rounded"
      />
      <div>
        <div
          class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
        />
        <div
          class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
        />
        <div
          class="mb-2 w-4/5 h-2 bg-slate-700 rounded"
        />
        <div
          class="mb-2 w-4/6 h-2 bg-slate-700 rounded"
        />
      </div>
    </div>
  </div>
</div>
`;
